Update  version requirement in settings.ini

--- a/settings.ini
+++ b/settings.ini
@@ -26,7 +26,7 @@ keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = johnnewto
-requirements = imutils>=0.5.4 numpy>=1.19 numpy-quaternion>=22.3.1 opencv_python>=4.8.0.76 pillow>10.0.0 pymavlink>=2.4.20 PyYAML>=5.4.1 pyserial>=3.5 fs>=2.4.16 toml>=0.10.2  colorlog>=6.7.0 pynput>=1.7.3 msgpack-rpc-python>=0.4.0 PySimpleGUI>=4.60.5 psutil>=5.8.0
+requirements = imutils>=0.5.4 numpy>=1.19 opencv_python>=4.8.0.76 pillow>10.0.0 pymavlink>=2.4.20 PyYAML>=5.4.1 pyserial>=3.5 fs>=2.4.16 toml>=0.10.2  colorlog>=6.7.0 pynput>=1.7.3 psutil>=5.8.0
 dev_requirements = matplotlib>=3.7.2 svg.py>=1.4.2 jupyter>=1.0.0 ipywidgets<=8.0.4 fastcore>=1.4 moviepy>=1.0.3 setuptools>=68.2.2
 extra_requirements = PyGObject==3.42.2
 readme_nb = index.ipynb
